--- a/RootFinder-TestFramework/RootFinder-TestFramework.vcxproj
+++ b/RootFinder-TestFramework/RootFinder-TestFramework.vcxproj
@@ -156,6 +156,11 @@
     </ClCompile>
     <ClCompile Include="unittest1.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RootFinder\RootFinder.vcxproj">
+      <Project>{abb82602-7874-4d57-9ffe-161bfec17652}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
